# projects

./: README.md
Async-Await/: main.py
Employee Management System/: main.py
FASTAPI_COMPLETE/: main.py  main2.py  temp.py
Multiprocessing/: main.py  main2.py
Pandas/: main.py
Pickle/: main.py
PixelFlow/: pyproject.toml  test.db
PixelFlow/app/: app.py  users.py
Pixela/: main.py
Pydantic/: main.py
SQLAlchemy/: main.py  main2.py  mydatabase.db
Selenium/: interactions.py  main.py  main2.py
